# image-recognition

./: .gitignore  BigImage.cpp  BigImage.hpp  CMakeLists.txt  README.md  SmallImage.cpp  SmallImage.hpp  SmallImageSet.cpp  SmallImageSet.hpp  big.txt  exceptions.cpp  exceptions.hpp  main.cpp  output.txt  small.txt  utils.cpp  utils.hpp
src/: BigImage.hpp  SmallImageSet.cpp  utils.cpp  utils.hpp
