cmake_minimum_required (VERSION 3.1)
project (ImageRecognition)
find_package (OpenCV REQUIRED)
add_executable (ImageRecognition main.cpp BigImage.cpp SmallImage.cpp SmallImageSet.cpp exceptions.cpp)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
target_link_libraries (ImageRecognition ${OpenCV_LIBS})
